--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node module to run a graph of tasks",
   "main": "index.js",
   "scripts": {
-    "test": "mocha spec"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,11 @@
   "author": "Conrad Zimmerman",
   "license": "MIT",
   "readmeFilename": "README.md",
+  "dependencies": {
+    "async": "~ 0.1.22"
+  },
   "devDependencies": {
     "mocha": "*",
     "chai": "*"
-  },
-  "dependencies": {
-    "async": "*"
   }
 }
